# game-of-life

./: .clang-format  .gitignore  .typos.toml  CMakeLists.txt  Justfile  LICENSE.txt  Makefile  README.md  REUSE.toml  run
.github/workflows/: Life.yml  actionlint.yml  checkmake.yml  copyrights.yml  cpp.yml  eolang.yml  make.yml  markdown-lint.yml  pdd.yml  reuse.yml  style.yml  typos.yml  yamllint.yml
CPP/: cell.cpp  config.cpp  game.cpp  grid.cpp  main.cpp  outputs.cpp  test.cpp
CPP/testCasesForCountCheck/: case1.txt
CPP/testCasesForSetCheck/: case1.txt  case2.txt  case3.txt
Fast/include/: arg_parse.h  args_check.h  args_process.h  args_valid.h  cell.h  config.h  field.h  game.h  grid.h  repeats.h  size.h
Fast/src/: arg_parse.cpp  args_check.cpp  args_process.cpp  args_valid.cpp  cell.cpp  field.cpp  game.cpp  grid.cpp  main.cpp  repeats.cpp  size.cpp
Fast/tests/Field_Tests/: test_alive.cpp  test_read_and_set.cpp
Fast/tests/Grid_Tests/: test_next_gen.cpp
Fast/tests/Parse_Tests/: test_alive.cpp  test_size.cpp
Fast/tests/Repeats_Tests/: test_repeats.cpp
Fast/tests/Size_Tests/: test_size.cpp
LICENSES/: MIT.txt
Slow/include/: cell.h  field.h  objects.h  parse.h
Slow/src/: cell.cpp  field.cpp  main.cpp  objects.cpp  parse.cpp
Slow/tests/Cell_Tests/: test_cell_live.cpp
Slow/tests/Field_Tests/: test_build.cpp  test_count.cpp  test_live.cpp  test_with.cpp
Slow/tests/Parse_Tests/: test_points_get.cpp
Tests/testCasesForNextGenCheck/: case3.txt
cpp/Fast/: Makefile
cpp/Fast/include/: args_process.h
cpp/Fast/src/: cell.cpp
cpp/Fast/tests/Field_Tests/: test_read_and_set.cpp
cpp/Slow/include/: parse.h
cpp/Slow/src/: objects.cpp
cpp/fast/: CMakeLists.txt  Makefile
cpp/fast/include/: arg_parse.h  args_check.h  args_process.h  args_valid.h  config.h  field.h  grid.h
cpp/fast/src/: arg_parse.cpp  args_check.cpp  args_process.cpp  args_valid.cpp  field.cpp  game.cpp  grid.cpp  main.cpp
cpp/fast/tests/Field_Tests/: test_alive.cpp  test_count_alive.cpp  test_next_gen.cpp
cpp/fast/tests/Parse_Tests/: test_alive.cpp
cpp/fast/tests/Repeats_Tests/: test_repeats.cpp
cpp/slow/: CMakeLists.txt  Makefile
cpp/slow/include/: cell.h  parse.h
cpp/slow/src/: field.cpp  main.cpp  parse.cpp
cpp/slow/tests/Field_Tests/: test_live.cpp
eo/: Makefile  cell.eo  cellLive.eo  changePair.eo  check.eo  count.eo  find.eo  getSize.eo  inside.eo  join.eo  life.eo  makeGrid.eo  nextGen.eo  pair.eo  parseCycle.eo  parsePut.eo  parseSize.eo  print.eo  process.eo
eo/conway/: cell.eo  field.eo  life.eo  parse.eo
game-of-life/: LICENSE.txt
include/: cell.h  config.h  game.h  grid.h  outputs.h
src/: Makefile  cell.cpp  config.cpp  game.cpp  grid.cpp  main.cpp  outputs.cpp  test.cpp
src/testCasesForNextGenCheck/: case1.txt  case2.txt
tests/: main.cpp  test.cpp
tests/testCasesForCountCheck/: case1.txt  case2.txt  case3.txt
tests/testCasesForNextGenCheck/: case1.txt  case2.txt  case3.txt
tests/testCasesForSetCheck/: case1.txt  case2.txt  case3.txt
